apps/nerdd-frontend/envs/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-frontend
spec:
  template:
    spec:
      containers:
        - name: nerdd-frontend
          image: nerdd-frontend:latest
      imagePullSecrets:
