apps/nerdd-frontend/envs/local/patch-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nerdd-frontend-ingressroute-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: nerdd-frontend
          port: 80
  tls:
    $patch: delete
